--- a/PKA_MID_BOSS1.html
+++ b/PKA_MID_BOSS1.html
@@ -22,101 +22,101 @@
 <h2 style="color: gold;">Level: 100+</h2>
 <h3>Stage 3:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_bind.png">9턴 동안 상단 봉쇄</div>
-<div class="icon-line"><img src="img/common_icon_skill_limit.png">3턴 동안 필살기 사용 횟수 1회 제한</div>
-<div class="icon-line"><img src="img/common_despair.png">9턴 동안 상단의 선장효과 무효</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_bind.png" style="height:42px; vertical-align:middle; margin-right:8px;">9턴 동안 상단 봉쇄</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_skill_limit.png" style="height:42px; vertical-align:middle; margin-right:8px;">3턴 동안 필살기 사용 횟수 1회 제한</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_despair.png" style="height:42px; vertical-align:middle; margin-right:8px;">9턴 동안 상단의 선장효과 무효</div>
 <br>
 <h3>Stage 4:</h3>
 <span class="label-initial" style="color:#87cefa">초기 상태: 로저&레일리&가반</span><br>
-<div class="icon-line"><img src="img/common_icon_mighty_guard_01.png">99턴 동안 지연 무효</div>
-<div class="icon-line"><img src="img/common_icon_mighty_guard_02.png">99턴 동안 독 무효</div>
-<div class="icon-line"><img src="img/common_icon_mighty_guard_03.png">99턴 동안 맹독 무효</div>
-<div class="icon-line"><img src="img/common_icon_mighty_guard.png">99턴 동안 서서히 데미지가 증가하는 독 무효</div>
-<div class="icon-line"><img src="img/common_icon_mighty_guard_04.png">99턴 동안 방어력 감소 무효</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_mighty_guard_01.png" style="height:42px; vertical-align:middle; margin-right:8px;">99턴 동안 지연 무효</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_mighty_guard_02.png" style="height:42px; vertical-align:middle; margin-right:8px;">99턴 동안 독 무효</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_mighty_guard_03.png" style="height:42px; vertical-align:middle; margin-right:8px;">99턴 동안 맹독 무효</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_mighty_guard.png" style="height:42px; vertical-align:middle; margin-right:8px;">99턴 동안 서서히 데미지가 증가하는 독 무효</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_mighty_guard_04.png" style="height:42px; vertical-align:middle; margin-right:8px;">99턴 동안 방어력 감소 무효</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_bind.png">12턴 동안 선원 봉쇄</div>
-<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
-<div class="icon-line"><img src="img/common_icon_hungry.png">3개의 [고기][셈라]를 얻기 전까지 매 턴 남은 체력의 20% 감소, 공격력 99% 감소</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_bind.png" style="height:42px; vertical-align:middle; margin-right:8px;">12턴 동안 선원 봉쇄</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/popuptext_slot_obstacle.png" style="height:42px; vertical-align:middle; margin-right:8px;">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_hungry.png" style="height:42px; vertical-align:middle; margin-right:8px;">3개의 [고기][셈라]를 얻기 전까지 매 턴 남은 체력의 20% 감소, 공격력 99% 감소</div>
 <br>
 <h3>Stage 5:</h3>
 <span class="label-initial" style="color:#87cefa">초기 상태: 샬롯 링링</span><br>
-<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_icon_210.png">적의 방어력 감소 이외의 상태이상 무효</div>
-<div class="icon-line"><img src="img/common_icon_death_invalid.png">격파(전투 불능)계의 필살기 무효</div>
-<div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">비율 데미지 내성 100%</div>
-<div class="icon-line"><img src="img/common_damagecut_icon.png">11턴 동안 1000을(를) 넘는 데미지를 99% 감소</div>
-<div class="icon-line"><img src="img/common_icon_deffence_up.png">7턴 동안 방어력 10000배</div>
-<div class="icon-line"><img src="img/quest_combo_barrier_g.png">4턴 동안 슬롯 배리어([G] 슬롯 1회)</div>
-<div class="icon-line"><img src="img/common_weak_06.png">약점 타입: 야심형</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_damage_onlyone.png" style="height:42px; vertical-align:middle; margin-right:8px;">일반 공격 이외의 데미지 1</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_210.png" style="height:42px; vertical-align:middle; margin-right:8px;">적의 방어력 감소 이외의 상태이상 무효</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_death_invalid.png" style="height:42px; vertical-align:middle; margin-right:8px;">격파(전투 불능)계의 필살기 무효</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_ratio_damagedown.png" style="height:42px; vertical-align:middle; margin-right:8px;">비율 데미지 내성 100%</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_damagecut_icon.png" style="height:42px; vertical-align:middle; margin-right:8px;">11턴 동안 1000을(를) 넘는 데미지를 99% 감소</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_deffence_up.png" style="height:42px; vertical-align:middle; margin-right:8px;">7턴 동안 방어력 10000배</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/quest_combo_barrier_g.png" style="height:42px; vertical-align:middle; margin-right:8px;">4턴 동안 슬롯 배리어([G] 슬롯 1회)</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_weak_06.png" style="height:42px; vertical-align:middle; margin-right:8px;">약점 타입: 야심형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_special_bind.png">10턴 동안 필살기 봉쇄</div>
-<div class="icon-line"><img src="img/common_icon_251_skill.png">5턴 동안 21500 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_special_bind.png" style="height:42px; vertical-align:middle; margin-right:8px;">10턴 동안 필살기 봉쇄</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_251_skill.png" style="height:42px; vertical-align:middle; margin-right:8px;">5턴 동안 21500 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
 <br>
 <hr style="border: 1px solid white;">
 <h2 style="color: gold;">Level: 1-59</h2>
 <h3>Stage 3:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_bind.png">2턴 동안 상단 봉쇄</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_bind.png" style="height:42px; vertical-align:middle; margin-right:8px;">2턴 동안 상단 봉쇄</div>
 <br>
 <h3>Stage 4:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_bind.png">2턴 동안 선원 봉쇄</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_bind.png" style="height:42px; vertical-align:middle; margin-right:8px;">2턴 동안 선원 봉쇄</div>
 <br>
 <h3>Stage 5:</h3>
 <span class="label-initial" style="color:#87cefa">초기 상태: 샬롯 링링</span><br>
-<div class="icon-line"><img src="img/common_weak_06.png">약점 타입: 야심형</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_weak_06.png" style="height:42px; vertical-align:middle; margin-right:8px;">약점 타입: 야심형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_damagecut_icon.png">2턴 동안 10000을(를) 넘는 데미지를 90% 감소</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_damagecut_icon.png" style="height:42px; vertical-align:middle; margin-right:8px;">2턴 동안 10000을(를) 넘는 데미지를 90% 감소</div>
 <br>
 <hr style="border: 1px solid white;">
 <h2 style="color: gold;">Level: 60-79</h2>
 <h3>Stage 3:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_bind.png">4턴 동안 상단 봉쇄</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_bind.png" style="height:42px; vertical-align:middle; margin-right:8px;">4턴 동안 상단 봉쇄</div>
 <br>
 <h3>Stage 4:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_bind.png">4턴 동안 선원 봉쇄</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_bind.png" style="height:42px; vertical-align:middle; margin-right:8px;">4턴 동안 선원 봉쇄</div>
 <br>
 <h3>Stage 5:</h3>
 <span class="label-initial" style="color:#87cefa">초기 상태: 샬롯 링링</span><br>
-<div class="icon-line"><img src="img/common_weak_06.png">약점 타입: 야심형</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_weak_06.png" style="height:42px; vertical-align:middle; margin-right:8px;">약점 타입: 야심형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_icon_251_skill.png">2턴 동안 5000 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
-<div class="icon-line"><img src="img/common_damagecut_icon.png">3턴 동안 5000을(를) 넘는 데미지를 99% 감소</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_251_skill.png" style="height:42px; vertical-align:middle; margin-right:8px;">2턴 동안 5000 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_damagecut_icon.png" style="height:42px; vertical-align:middle; margin-right:8px;">3턴 동안 5000을(를) 넘는 데미지를 99% 감소</div>
 <br>
 <hr style="border: 1px solid white;">
 <h2 style="color: gold;">Level: 80-99</h2>
 <h3>Stage 3:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_bind.png">8턴 동안 상단 봉쇄</div>
-<div class="icon-line"><img src="img/common_icon_skill_limit.png">3턴 동안 필살기 사용 횟수 1회 제한</div>
-<div class="icon-line"><img src="img/common_despair.png">8턴 동안 상단의 선장효과 무효</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_bind.png" style="height:42px; vertical-align:middle; margin-right:8px;">8턴 동안 상단 봉쇄</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_skill_limit.png" style="height:42px; vertical-align:middle; margin-right:8px;">3턴 동안 필살기 사용 횟수 1회 제한</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_despair.png" style="height:42px; vertical-align:middle; margin-right:8px;">8턴 동안 상단의 선장효과 무효</div>
 <br>
 <h3>Stage 4:</h3>
 <span class="label-initial" style="color:#87cefa">초기 상태: 로저&레일리&가반</span><br>
-<div class="icon-line"><img src="img/common_icon_mighty_guard_01.png">99턴 동안 지연 무효</div>
-<div class="icon-line"><img src="img/common_icon_mighty_guard_02.png">99턴 동안 독 무효</div>
-<div class="icon-line"><img src="img/common_icon_mighty_guard_03.png">99턴 동안 맹독 무효</div>
-<div class="icon-line"><img src="img/common_icon_mighty_guard.png">99턴 동안 서서히 데미지가 증가하는 독 무효</div>
-<div class="icon-line"><img src="img/common_icon_mighty_guard_04.png">99턴 동안 방어력 감소 무효</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_mighty_guard_01.png" style="height:42px; vertical-align:middle; margin-right:8px;">99턴 동안 지연 무효</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_mighty_guard_02.png" style="height:42px; vertical-align:middle; margin-right:8px;">99턴 동안 독 무효</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_mighty_guard_03.png" style="height:42px; vertical-align:middle; margin-right:8px;">99턴 동안 맹독 무효</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_mighty_guard.png" style="height:42px; vertical-align:middle; margin-right:8px;">99턴 동안 서서히 데미지가 증가하는 독 무효</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_mighty_guard_04.png" style="height:42px; vertical-align:middle; margin-right:8px;">99턴 동안 방어력 감소 무효</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_bind.png">10턴 동안 선원 봉쇄</div>
-<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
-<div class="icon-line"><img src="img/common_icon_hungry.png">2개의 [고기][셈라]를 얻기 전까지 매 턴 남은 체력의 15% 감소, 공격력 90% 감소</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_bind.png" style="height:42px; vertical-align:middle; margin-right:8px;">10턴 동안 선원 봉쇄</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/popuptext_slot_obstacle.png" style="height:42px; vertical-align:middle; margin-right:8px;">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_hungry.png" style="height:42px; vertical-align:middle; margin-right:8px;">2개의 [고기][셈라]를 얻기 전까지 매 턴 남은 체력의 15% 감소, 공격력 90% 감소</div>
 <br>
 <h3>Stage 5:</h3>
 <span class="label-initial" style="color:#87cefa">초기 상태: 샬롯 링링</span><br>
-<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">99턴 동안 일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_icon_210.png">99턴 동안 적의 방어력 감소 이외의 상태이상 무효</div>
-<div class="icon-line"><img src="img/common_icon_death_invalid.png">99턴 동안격파(전투 불능)계의 필살기 무효</div>
-<div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">99턴 동안비율 데미지 내성 100%</div>
-<div class="icon-line"><img src="img/common_damagecut_icon.png">9턴 동안 1000을(를) 넘는 데미지를 99% 감소</div>
-<div class="icon-line"><img src="img/common_icon_deffence_up.png">6턴 동안 방어력 5000배</div>
-<div class="icon-line"><img src="img/quest_combo_barrier_g.png">3턴 동안 슬롯 배리어([G] 슬롯 1회)</div>
-<div class="icon-line"><img src="img/common_weak_06.png">약점 타입: 야심형</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_damage_onlyone.png" style="height:42px; vertical-align:middle; margin-right:8px;">99턴 동안 일반 공격 이외의 데미지 1</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_210.png" style="height:42px; vertical-align:middle; margin-right:8px;">99턴 동안 적의 방어력 감소 이외의 상태이상 무효</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_death_invalid.png" style="height:42px; vertical-align:middle; margin-right:8px;">99턴 동안격파(전투 불능)계의 필살기 무효</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_ratio_damagedown.png" style="height:42px; vertical-align:middle; margin-right:8px;">99턴 동안비율 데미지 내성 100%</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_damagecut_icon.png" style="height:42px; vertical-align:middle; margin-right:8px;">9턴 동안 1000을(를) 넘는 데미지를 99% 감소</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_deffence_up.png" style="height:42px; vertical-align:middle; margin-right:8px;">6턴 동안 방어력 5000배</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/quest_combo_barrier_g.png" style="height:42px; vertical-align:middle; margin-right:8px;">3턴 동안 슬롯 배리어([G] 슬롯 1회)</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_weak_06.png" style="height:42px; vertical-align:middle; margin-right:8px;">약점 타입: 야심형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_special_bind.png">8턴 동안 필살기 봉쇄</div>
-<div class="icon-line"><img src="img/common_icon_251_skill.png">5턴 동안 13000 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_special_bind.png" style="height:42px; vertical-align:middle; margin-right:8px;">8턴 동안 필살기 봉쇄</div>
+<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_251_skill.png" style="height:42px; vertical-align:middle; margin-right:8px;">5턴 동안 13000 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
 <br>
 </body></html>
