--- a/PKA_MID_BOSS2.html
+++ b/PKA_MID_BOSS2.html
@@ -22,101 +22,101 @@
 <h2 style="color: gold;">Level: 100+</h2>
 <h3>Stage 3:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_bind.png" style="height:42px; vertical-align:middle; margin-right:8px;">9턴 동안 선원 봉쇄</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_blind.png" style="height:42px; vertical-align:middle; margin-right:8px;">3턴 동안 의성어 은폐 상태</div>
+<div class="icon-line"><img src="img/common_bind.png">9턴 동안 선원 봉쇄</div>
+<div class="icon-line"><img src="img/common_icon_blind.png">3턴 동안 의성어 은폐 상태</div>
 <br>
 <h3>Stage 4:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_state_icon_attack_down.png" style="height:42px; vertical-align:middle; margin-right:8px;">6턴 동안 공격력 90% 감소</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/quest_combo_barrier_3.png" style="height:42px; vertical-align:middle; margin-right:8px;">4턴 동안 탭 타이밍 배리어(PERFECT 3회)</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_mighty_guard_00.png" style="height:42px; vertical-align:middle; margin-right:8px;">98턴 동안 상태이상 무효</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_damagecut_dummy.png" style="height:42px; vertical-align:middle; margin-right:8px;">6턴 동안 받는 데미지를 90% 감소</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_deffence_up.png" style="height:42px; vertical-align:middle; margin-right:8px;">6턴 동안 방어력 10000배</div>
+<div class="icon-line"><img src="img/common_state_icon_attack_down.png">6턴 동안 공격력 90% 감소</div>
+<div class="icon-line"><img src="img/quest_combo_barrier_3.png">4턴 동안 탭 타이밍 배리어(PERFECT 3회)</div>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">98턴 동안 상태이상 무효</div>
+<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">6턴 동안 받는 데미지를 90% 감소</div>
+<div class="icon-line"><img src="img/common_icon_deffence_up.png">6턴 동안 방어력 10000배</div>
 <br>
 <h3>Stage 5:</h3>
 <span class="label-initial" style="color:#87cefa">초기 상태: 도리&브로기</span><br>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_damage_onlyone.png" style="height:42px; vertical-align:middle; margin-right:8px;">일반 공격 이외의 데미지 1</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_mighty_guard_01.png" style="height:42px; vertical-align:middle; margin-right:8px;">지연 무효</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_mighty_guard_04.png" style="height:42px; vertical-align:middle; margin-right:8px;">방어력 감소 무효</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_mighty_guard_02.png" style="height:42px; vertical-align:middle; margin-right:8px;">독 무효</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_mighty_guard_03.png" style="height:42px; vertical-align:middle; margin-right:8px;">맹독 무효</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_mighty_guard.png" style="height:42px; vertical-align:middle; margin-right:8px;">서서히 데미지가 증가하는 독 무효</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_death_invalid.png" style="height:42px; vertical-align:middle; margin-right:8px;">격파(전투 불능)계의 필살기 무효</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_ratio_damagedown.png" style="height:42px; vertical-align:middle; margin-right:8px;">비율 데미지 내성 100%</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_weak_06.png" style="height:42px; vertical-align:middle; margin-right:8px;">약점 타입: 야심형</div>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_01.png">지연 무효</div>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_04.png">방어력 감소 무효</div>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_02.png">독 무효</div>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_03.png">맹독 무효</div>
+<div class="icon-line"><img src="img/common_icon_mighty_guard.png">서서히 데미지가 증가하는 독 무효</div>
+<div class="icon-line"><img src="img/common_icon_death_invalid.png">격파(전투 불능)계의 필살기 무효</div>
+<div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">비율 데미지 내성 100%</div>
+<div class="icon-line"><img src="img/common_weak_06.png">약점 타입: 야심형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_palsy.png" style="height:42px; vertical-align:middle; margin-right:8px;">7턴 동안 마비</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_stun.png" style="height:42px; vertical-align:middle; margin-right:8px;">상단은(는) 받는 데미지 3배의 기절</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_tap_countlimit.png" style="height:42px; vertical-align:middle; margin-right:8px;">2턴 동안 탭 횟수 제한 4회</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_230_skill.png" style="height:42px; vertical-align:middle; margin-right:8px;">2턴 동안 대상의 상태 이상 중, 특정 상태 이상 턴이 2턴 감소(대상의 상태 이상: 일당의 공격력 상승)</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_damagecut_icon.png" style="height:42px; vertical-align:middle; margin-right:8px;">7턴 동안 1000을(를) 넘는 데미지를 99% 감소</div>
+<div class="icon-line"><img src="img/common_palsy.png">7턴 동안 마비</div>
+<div class="icon-line"><img src="img/common_stun.png">상단은(는) 받는 데미지 3배의 기절</div>
+<div class="icon-line"><img src="img/common_icon_tap_countlimit.png">2턴 동안 탭 횟수 제한 4회</div>
+<div class="icon-line"><img src="img/common_icon_230_skill.png">2턴 동안 대상의 상태 이상 중, 특정 상태 이상 턴이 2턴 감소(대상의 상태 이상: 일당의 공격력 상승)</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">7턴 동안 1000을(를) 넘는 데미지를 99% 감소</div>
 <br>
 <hr style="border: 1px solid white;">
 <h2 style="color: gold;">Level: 1-59</h2>
 <h3>Stage 3:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_bind.png" style="height:42px; vertical-align:middle; margin-right:8px;">3턴 동안 선원 봉쇄</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_blind.png" style="height:42px; vertical-align:middle; margin-right:8px;">1턴 동안 의성어 은폐 상태</div>
+<div class="icon-line"><img src="img/common_bind.png">3턴 동안 선원 봉쇄</div>
+<div class="icon-line"><img src="img/common_icon_blind.png">1턴 동안 의성어 은폐 상태</div>
 <br>
 <h3>Stage 4:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_state_icon_attack_down.png" style="height:42px; vertical-align:middle; margin-right:8px;">2턴 동안 공격력 50% 감소</div>
+<div class="icon-line"><img src="img/common_state_icon_attack_down.png">2턴 동안 공격력 50% 감소</div>
 <br>
 <h3>Stage 5:</h3>
 <span class="label-initial" style="color:#87cefa">초기 상태: 도리&브로기</span><br>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_weak_06.png" style="height:42px; vertical-align:middle; margin-right:8px;">약점 타입: 야심형</div>
+<div class="icon-line"><img src="img/common_weak_06.png">약점 타입: 야심형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_damagecut_icon.png" style="height:42px; vertical-align:middle; margin-right:8px;">2턴 동안 10000을(를) 넘는 데미지를 90% 감소</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">2턴 동안 10000을(를) 넘는 데미지를 90% 감소</div>
 <br>
 <hr style="border: 1px solid white;">
 <h2 style="color: gold;">Level: 60-79</h2>
 <h3>Stage 3:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_bind.png" style="height:42px; vertical-align:middle; margin-right:8px;">5턴 동안 선원 봉쇄</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_blind.png" style="height:42px; vertical-align:middle; margin-right:8px;">2턴 동안 의성어 은폐 상태</div>
+<div class="icon-line"><img src="img/common_bind.png">5턴 동안 선원 봉쇄</div>
+<div class="icon-line"><img src="img/common_icon_blind.png">2턴 동안 의성어 은폐 상태</div>
 <br>
 <h3>Stage 4:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_state_icon_attack_down.png" style="height:42px; vertical-align:middle; margin-right:8px;">3턴 동안 공격력 60% 감소</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/quest_combo_barrier_3.png" style="height:42px; vertical-align:middle; margin-right:8px;">1턴 동안 탭 타이밍 배리어(PERFECT 1회)</div>
+<div class="icon-line"><img src="img/common_state_icon_attack_down.png">3턴 동안 공격력 60% 감소</div>
+<div class="icon-line"><img src="img/quest_combo_barrier_3.png">1턴 동안 탭 타이밍 배리어(PERFECT 1회)</div>
 <br>
 <h3>Stage 5:</h3>
 <span class="label-initial" style="color:#87cefa">초기 상태: 도리&브로기</span><br>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_weak_06.png" style="height:42px; vertical-align:middle; margin-right:8px;">약점 타입: 야심형</div>
+<div class="icon-line"><img src="img/common_weak_06.png">약점 타입: 야심형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_palsy.png" style="height:42px; vertical-align:middle; margin-right:8px;">3턴 동안 마비</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_damagecut_icon.png" style="height:42px; vertical-align:middle; margin-right:8px;">3턴 동안 5000을(를) 넘는 데미지를 90% 감소</div>
+<div class="icon-line"><img src="img/common_palsy.png">3턴 동안 마비</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">3턴 동안 5000을(를) 넘는 데미지를 90% 감소</div>
 <br>
 <hr style="border: 1px solid white;">
 <h2 style="color: gold;">Level: 80-99</h2>
 <h3>Stage 3:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_bind.png" style="height:42px; vertical-align:middle; margin-right:8px;">8턴 동안 선원 봉쇄</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_blind.png" style="height:42px; vertical-align:middle; margin-right:8px;">3턴 동안 의성어 은폐 상태</div>
+<div class="icon-line"><img src="img/common_bind.png">8턴 동안 선원 봉쇄</div>
+<div class="icon-line"><img src="img/common_icon_blind.png">3턴 동안 의성어 은폐 상태</div>
 <br>
 <h3>Stage 4:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_state_icon_attack_down.png" style="height:42px; vertical-align:middle; margin-right:8px;">6턴 동안 공격력 70% 감소</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/quest_combo_barrier_3.png" style="height:42px; vertical-align:middle; margin-right:8px;">2턴 동안 탭 타이밍 배리어(PERFECT 3회)</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_mighty_guard_00.png" style="height:42px; vertical-align:middle; margin-right:8px;">98턴 동안 상태이상 무효</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_damagecut_dummy.png" style="height:42px; vertical-align:middle; margin-right:8px;">6턴 동안 받는 데미지를 60% 감소</div>
+<div class="icon-line"><img src="img/common_state_icon_attack_down.png">6턴 동안 공격력 70% 감소</div>
+<div class="icon-line"><img src="img/quest_combo_barrier_3.png">2턴 동안 탭 타이밍 배리어(PERFECT 3회)</div>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">98턴 동안 상태이상 무효</div>
+<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">6턴 동안 받는 데미지를 60% 감소</div>
 <br>
 <h3>Stage 5:</h3>
 <span class="label-initial" style="color:#87cefa">초기 상태: 도리&브로기</span><br>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_damage_onlyone.png" style="height:42px; vertical-align:middle; margin-right:8px;">99턴 동안 일반 공격 이외의 데미지 1</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_mighty_guard_01.png" style="height:42px; vertical-align:middle; margin-right:8px;">99턴 동안 지연 무효</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_mighty_guard_04.png" style="height:42px; vertical-align:middle; margin-right:8px;">99턴 동안 방어력 감소 무효</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_mighty_guard_02.png" style="height:42px; vertical-align:middle; margin-right:8px;">99턴 동안 독 무효</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_mighty_guard_03.png" style="height:42px; vertical-align:middle; margin-right:8px;">99턴 동안 맹독 무효</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_mighty_guard.png" style="height:42px; vertical-align:middle; margin-right:8px;">99턴 동안 서서히 데미지가 증가하는 독 무효</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_death_invalid.png" style="height:42px; vertical-align:middle; margin-right:8px;">99턴 동안격파(전투 불능)계의 필살기 무효</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_ratio_damagedown.png" style="height:42px; vertical-align:middle; margin-right:8px;">99턴 동안비율 데미지 내성 100%</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_weak_06.png" style="height:42px; vertical-align:middle; margin-right:8px;">약점 타입: 야심형</div>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">99턴 동안 일반 공격 이외의 데미지 1</div>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_01.png">99턴 동안 지연 무효</div>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_04.png">99턴 동안 방어력 감소 무효</div>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_02.png">99턴 동안 독 무효</div>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_03.png">99턴 동안 맹독 무효</div>
+<div class="icon-line"><img src="img/common_icon_mighty_guard.png">99턴 동안 서서히 데미지가 증가하는 독 무효</div>
+<div class="icon-line"><img src="img/common_icon_death_invalid.png">99턴 동안격파(전투 불능)계의 필살기 무효</div>
+<div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">99턴 동안비율 데미지 내성 100%</div>
+<div class="icon-line"><img src="img/common_weak_06.png">약점 타입: 야심형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_palsy.png" style="height:42px; vertical-align:middle; margin-right:8px;">6턴 동안 마비</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_stun.png" style="height:42px; vertical-align:middle; margin-right:8px;">상단은(는) 받는 데미지 1.5배의 기절</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_tap_countlimit.png" style="height:42px; vertical-align:middle; margin-right:8px;">1턴 동안 탭 횟수 제한 5회</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_icon_230_skill.png" style="height:42px; vertical-align:middle; margin-right:8px;">1턴 동안 대상의 상태 이상 중, 특정 상태 이상 턴이 1턴 감소(대상의 상태 이상: 일당의 공격력 상승)</div>
-<div class="icon-line" style="font-size:26px; line-height:1.5;"><img src="img/common_damagecut_icon.png" style="height:42px; vertical-align:middle; margin-right:8px;">6턴 동안 3000을(를) 넘는 데미지를 90% 감소</div>
+<div class="icon-line"><img src="img/common_palsy.png">6턴 동안 마비</div>
+<div class="icon-line"><img src="img/common_stun.png">상단은(는) 받는 데미지 1.5배의 기절</div>
+<div class="icon-line"><img src="img/common_icon_tap_countlimit.png">1턴 동안 탭 횟수 제한 5회</div>
+<div class="icon-line"><img src="img/common_icon_230_skill.png">1턴 동안 대상의 상태 이상 중, 특정 상태 이상 턴이 1턴 감소(대상의 상태 이상: 일당의 공격력 상승)</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">6턴 동안 3000을(를) 넘는 데미지를 90% 감소</div>
 <br>
 </body></html>
